--- a/PioneerHacks/index.html
+++ b/PioneerHacks/index.html
@@ -240,6 +240,14 @@
 </script>
 
 <script>
+    // add event listener to secondbutton
+    document.getElementById("firstbutton").addEventListener("click", function() {
+        // open new window with Number Memory Game code
+        window.open("memory.html", "_blank");
+    });
+</script>
+
+<script>
     // add event listener to aboutbutton
     document.getElementById("aboutbutton").addEventListener("click", function() {
         // open new window with info.html code
